# nitro-examples

./: .gitignore  README.md
nitro-golang-example/: EC2EnvSetup.md  README.md  go.work
nitro-golang-example/enclave/: Dockerfile  build.sh  buildAndRunOnEC2.sh  buildEnclaveAndRunOnEC2.sh  enclaveServer  enclaveServer.go  go.mod  go.sum  run.sh
nitro-golang-example/enclavek8s/: Dockerfile  kms_server_deployment.yaml  run.sh
nitro-golang-example/k8s-deployment/: Dockerfile  buildEnclaveImage.sh  enclave_cluster_config.yaml  enclaveserver_deployment.yaml  run.sh
nitro-golang-example/parent/: Dockerfile  appClient.go  appclient-deployment.yaml  buildClientAndRunOnEC2.sh  buildDocker.sh  go.mod  go.sum  parentClient.go  parentInstance.go
nitro-golang-example/parentk8s/: appClient.go
nitro-python-example/: README.md
nitro-python-example-enclave-cli/: README.md
nitro-python-example-enclave-cli/enclave/: Dockerfile  kms.py  requirements.txt
nitro-python-example-enclave-cli/parent/: parentClient.py
nitro-python-example/enclave/: Dockerfile  build.sh  buildAndRunOnEC2.sh  enclaveServer.py  kms.py  requirements.txt  run.sh  traffic-forwarder.py
nitro-python-example/k8s-deployment/: buildDocker.sh  enclaveserver_deployment.yaml  run.sh
nitro-python-example/parent/: Dockerfile  appClient.py  parentClient.py  requirements.txt
nitro-rust-example/: Cargo.toml  README.md
nitro-rust-example/aws-dynamodb-kms-demo/: Cargo.toml  README.md
nitro-rust-example/aws-dynamodb-kms-demo/src/: lib.rs
nitro-rust-example/aws-dynamodb-kms-demo/src/scenario/: query.rs
nitro-rust-example/enclave/: Cargo.toml  Dockerfile  Dockerfile.bak  Makefile
nitro-rust-example/enclave/src/: chain_eth.rs  crypto_utils.rs  kms.rs  lib.rs  protocol_helper.rs
nitro-rust-example/enclave/tests/: test_kms.rs
nitro-rust-example/parent/: Cargo.toml  Dockerfile  Makefile
nitro-rust-example/parent/src/: dynamodb_helper.rs  iam.rs  lib.rs  protocol_helper.rs
nitro-rust-example/parent/src/scenario/: add.rs  create.rs  mod.rs
terraform/: README.md
terraform/dynamodb/: main.tf  outputs.tf
terraform/ec2-key-pair/: main.tf
terraform/ec2-security-group/: main.tf  outputs.tf
terraform/ec2-x86/: main.tf
terraform/iam/: main.tf  outputs.tf
terraform/kms/: main.tf  outputs.tf
vsockdemo/enclave/: Dockerfile  go.mod  localtest.sh  requirements.txt  run.sh  vsockEnclave.go
vsockdemo/parent/: go.mod  vsockParent.go
