[package]
name = "parent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "enclave-client"
path = "bin/enclave-client.rs"

[dependencies]
anyhow = "1.0.73"
byteorder = "1.4.3"
clap = { version = "4.3.21", features = ["derive"]}
serde_json = "1.0.104"
vsock = "0.3.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["full"] }
aws-config = "0.56.0"
aws-sdk-dynamodb = "0.29.0"
thiserror = "1.0.47"
